--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <script src="main_script.js"></script>
 
   <script>
-    window.onload = function() {
-      setupMain(document);
+    window.onload = async function() {
+      await setupMain(document);
     };
   </script>
 </head>
