--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       </div>
       <div class="about-text-block">
         <div class="about-panel" >
-          <h3 style="text-align: center;">С чем ко мне обращаются</h3>
-          <p style="font-size: var(--fs18);"  edicontent_id="s-chem-ko-mne-obraschayutsya-esli-vy">
+          <h3 style="text-align: center;" edicontent_id="s-chem-ko-mne-obraschayutsya">С чем ко мне обращаются</h3>
+          <p style="font-size: var(--fs18);"  edicontent_id="esli-vy-v-poiske-samoopredeleniya-smysla">
 Если Вы в поиске самоопределения, смысла, внутренней опоры; переживаете экзистенциальный кризис, духовную или внутреннюю трансформацию; чувствуете, что привычные фундаменты рушатся, а новые еще не простроены — это пространство для Вас. <br>
 Но не обязательно приходить именно с этим. Часто Вы обращаетесь с тревогой, усталостью, выгоранием, тупиком в отношениях, внешним конфликтом или ощущением, что «что-то не так». А затем, рано или поздно, оказываетесь на пути вглубь себя: того самого, настоящего, живого, иногда почти забытого. Вот здесь и начинается самое интересное.
 </p>
@@ -173,7 +173,7 @@
       </div>
 
       <div class="services-group">
-        <div class="services-group-title" editcontent_id="oflayn-v-g-almaty">Офлайн в г. Алматы</div>
+        <div class="services-group-title" edicontent_id="oflayn-v-g-almaty">Офлайн в г. Алматы</div>
         <div class="grid grid-2">
           <div class="card service-card fancy-service">
             <i class="fas fa-dice-d20"></i>
