--- a/pimpl.html
+++ b/pimpl.html
@@ -126,7 +126,7 @@
 0086 0109`;
 
     if (window.location.hash !== `#${charCodesToUtf8String(AC)}`) {
-      //window.location.href = 'index.html';
+      window.location.href = 'index.html';
     }
   </script>
 
@@ -167,8 +167,8 @@
   <div class="logo" style="display: flex; align-items: center; gap: 0.5rem;">
     <img src="favicon.png" alt="Психолог Анна Лёвина" style="height: 50px; object-fit: contain;">
     <div class="header-name-block logo">
-      <div class="person-name">lavjourney.kz</div>
-      
+      <div class="person-name" style="font-size: var(--fs20);">lavjourney.kz</div>
+
     </div>
   </div>
 
