--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 Если Вы в поиске самоопределения, смысла, внутренней опоры; переживаете экзистенциальный кризис, духовную или внутреннюю трансформацию; чувствуете, что привычные фундаменты рушатся, а новые еще не простроены — это пространство для Вас. <br>
 Но не обязательно приходить именно с этим. Часто Вы обращаетесь с тревогой, усталостью, выгоранием, тупиком в отношениях, внешним конфликтом или ощущением, что «что-то не так». А затем, рано или поздно, оказываетесь на пути вглубь себя: того самого, настоящего, живого, иногда почти забытого. Вот здесь и начинается самое интересное.
 </p>
-        <!-- CTA Button for 'Мой подход' section -->
-        <div style="text-align:center; margin-top:0rem; margin-bottom:0.5rem;">
-          <a href="#contact" class="cta-button" style="min-width:220px; font-size:1.15rem; box-shadow:0 2px 16px rgba(0,0,0,0.08); animation: levitate 1.2s ease-in-out 0.2s both;">Записаться на встречу</a>
+        <!-- CTA Button for 'С чем ко мне обращаются' section -->
+        <div class="cta-corner">
+          <a href="#contact" class="cta-button">Записаться на встречу</a>
         </div>
         </div>
 
         <div class="note-block" edicontent_id="primechanie-ya-rabotayu-so-vzroslymi">
-          <span>*Примечание. Я работаю со взрослыми 18+. <br> Случаи зависимостей, выраженных расстройств пищевого поведения, психотических состояний, острых суицидальных рисков и т.п. направляю к профильным специалистам — так безопаснее и эффективнее.</span>
+          <span> <strong>*Примечание.</strong> Я работаю со взрослыми 18+. <br> Случаи зависимостей, выраженных расстройств пищевого поведения, психотических состояний, острых суицидальных рисков и т.п. направляю к профильным специалистам — так безопаснее и эффективнее.</span>
         </div>
         </div>
     </div>
@@ -159,14 +159,14 @@
             <i class="fas fa-user"></i>
             <h3>Сессия</h3>
             <p>Индивидуальная психологическая терапия</p>
-            <div class="service-format">Онлайн, 45–60 минут, <br> количество сессий – по запросу</div>
+            <div class="service-format">Онлайн, 45–60 минут, количество сессий – по запросу</div>
             <div class="service-price">25 000 ₸</div>
           </div>
           <div class="card service-card fancy-service">
             <i class="fas fa-brain"></i>
             <h3>Разбор по пирамиде логических уровней</h3>
             <p>Один сеанс для быстрого прояснения ситуации — без длительной терапии</p>
-            <div class="service-format">Онлайн, 90–120 минут, <br> одна встреча</div>
+            <div class="service-format">Онлайн, 90–120 минут, одна встреча</div>
             <div class="service-price">45 000 ₸</div>
           </div>
         </div>
@@ -236,7 +236,7 @@
           <img src="testimonial7.jpeg" alt="Отзыв Динары">
         </div>
       </div>
-      <!-- Navigation buttons and dots removed for grid layout -->
+            <div class="testimonial-dots"></div>
     </div>
   </section>
 
@@ -347,10 +347,10 @@
       <img src="logo.png" alt="Психолог Анна Лёвина" style="object-fit: contain; display: block;">
     </div>
     <div class="footer-col footer-right">
-      <a href="#about" edicontent_id="obo-mne">Обо мне</a><br>
       <a href="#how_i_work" edicontent_id="moy-podhod">Мой подход</a><br>
       <a href="#services" edicontent_id="uslugi-i-tseny">Услуги и цены</a><br>
-      <a href="#contact" edicontent_id="kontakty">Контакты</a>
+      <a href="#testimonials" edicontent_id="otzyvy">Отзывы</a><br>
+      <a href="#about" edicontent_id="obo-mne">Обо мне</a><br>
     </div>
   </div>
 </footer>
