--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </div>
 
         <div class="card" style="text-align: center;">
-          <a href="https://wa.me/77772451227?text=Добрый день! Связываюсь с Вами через Ваш сайт." target="_blank" style="display: block; text-decoration: none; color: inherit;cursor: default;">
+          <a href="https://bit.ly/lavjourney-contact-wa" target="_blank" style="display: block; text-decoration: none; color: inherit;cursor: default;">
             <i class="fab fa-whatsapp" style="font-size: 2rem; color: var(--accent-color);"></i>
             <p><span class="contact-link">WhatsApp</span></p>
           </a>
