--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     <div class="testimonial-lightbox-content" style="max-width: 95vw; max-height: 95vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
       <img id="testimonialLightboxImg" src="" alt="Фото отзыва" style="max-width: 70%; max-height: 90vh; border-radius: 12px; box-shadow: 0 2px 16px rgba(0,0,0,0.13); transition: transform 0.3s;">
       <div id="testimonialLightboxClient" style="margin-top: 1.2rem; font-size: 1.2rem; color: var(--accent-color); font-weight: 700;"></div>
-      <div class="nav prev desktop-only" style="position: absolute; left: 2vw; top: 50%; transform: translateY(-50%); font-size: 2.5rem; cursor: pointer; user-select: none;">❮</div>
-      <div class="nav next desktop-only" style="position: absolute; right: 2vw; top: 50%; transform: translateY(-50%); font-size: 2.5rem; cursor: pointer; user-select: none;">❯</div>
+      <div class="nav prev" style="position: absolute; left: 2vw; top: 50%; transform: translateY(-50%); font-size: 2.5rem; cursor: pointer; user-select: none;">❮</div>
+      <div class="nav next" style="position: absolute; right: 2vw; top: 50%; transform: translateY(-50%); font-size: 2.5rem; cursor: pointer; user-select: none;">❯</div>
     </div>
   </div>
   
