--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
       <div class="about-text-block">
         <div class="about-panel" >
           <h3 style="text-align: center;" edicontent_id="s-chem-ko-mne-obraschayutsya">С чем ко мне обращаются</h3>
-          <p style="font-size: var(--fs18);"  edicontent_id="esli-vy-v-poiske-samoopredeleniya-smysla">
+          <p style="font-size: var(--fs18);" class="force-justify"  edicontent_id="esli-vy-v-poiske-samoopredeleniya-smysla">
 Если Вы в поиске самоопределения, смысла, внутренней опоры; переживаете экзистенциальный кризис, духовную или внутреннюю трансформацию; чувствуете, что привычные фундаменты рушатся, а новые еще не простроены — это пространство для Вас. <br>
 Но не обязательно приходить именно с этим. Часто Вы обращаетесь с тревогой, усталостью, выгоранием, тупиком в отношениях, внешним конфликтом или ощущением, что «что-то не так». А затем, рано или поздно, оказываетесь на пути вглубь себя: того самого, настоящего, живого, иногда почти забытого. Вот здесь и начинается самое интересное.
 </p>
-        <!-- CTA Button for 'С чем ко мне обращаются' section -->
         <div class="cta-corner">
           <a href="#contact" class="cta-button">Записаться на встречу</a>
         </div>
