--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Анна Лёвина</title>
-  <meta name="description" content="Психологическая помощь онлайн – Анна Лёвина, КПТ, кризисная терапия.">
-  <meta name="keywords" content="психолог, депрессия, тревога, Алматы, онлайн">
+  <title>Психолог Анна Лёвина — онлайн терапия и консультации в Алматы</title>
+  <meta name="description" content="Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия">
+  <meta name="keywords" content="психолог Алматы, клинический психолог, онлайн терапия, психологические консультации, расстановки, игра лила, экзистенциальная терапия, НЛП, тревога, депрессия, кризис среднего возраста, выгорание, психотерапия онлайн, психолог женщина, телесные шахматы, символдрама, психодинамический подход, личностный рост, самопознание">
   <meta property="og:title" content="Анна Лёвина">
   <meta property="og:description" content="Анна Лёвина — квалифицированная психологическая поддержка">
   <meta name="robots" content="index, follow">
-  
+
   <link rel="icon" href="favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
