--- a/index.html
+++ b/index.html
@@ -21,6 +21,219 @@
       await setupMain(document);
     };
   </script>
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Психолог Анна Лёвина",
+    "alternateName": "Анна Лёвина психолог",
+    "description": "Клинический психолог Анна Лёвина предоставляет онлайн консультации по всему миру и офлайн в Алматы. Работа с тревогой, депрессией, кризисами, расстановки, игра Лила, экзистенциальная терапия.",
+    "url": "https://lavjourney.kz",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Алматы",
+      "addressCountry": "KZ",
+      "addressRegion": "Алматинская область"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 43.2220,
+      "longitude": 76.8512
+    },
+    "openingHours": "Mo-Su 09:00-21:00",
+    "priceRange": "25000-45000 ₸",
+    "image": "https://lavjourney.kz/anya-main.jpg",
+    "logo": "https://lavjourney.kz/logo.png",
+    "sameAs": [
+      "https://bit.ly/lavjourney-contact-wa"
+    ],
+    "serviceArea": {
+      "@type": "Place",
+      "name": "Worldwide Online, Almaty Offline"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Психологические услуги",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Сессия",
+            "description": "Индивидуальная психологическая терапия",
+            "serviceType": "Психотерапия"
+          },
+          "price": "25000",
+          "priceCurrency": "KZT",
+          "availability": "https://schema.org/InStock"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Разбор по пирамиде логических уровней",
+            "description": "Один сеанс для быстрого прояснения ситуации — без длительной терапии",
+            "serviceType": "НЛП консультация"
+          },
+          "price": "45000",
+          "priceCurrency": "KZT",
+          "availability": "https://schema.org/InStock"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Трансформационная игра Лила",
+            "description": "Духовное путешествие по игровому полю, где каждый ход — шаг к пониманию себя и своей жизни",
+            "serviceType": "Трансформационная игра"
+          },
+          "price": "40000",
+          "priceCurrency": "KZT",
+          "availability": "https://schema.org/InStock"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Расстановка Телесные шахматы",
+            "description": "Глубокая работа в группе, где Ваша история предстает под другим углом и открывает новые возможности",
+            "serviceType": "Групповая терапия"
+          },
+          "price": "25000",
+          "priceCurrency": "KZT",
+          "availability": "https://schema.org/InStock"
+        }
+      ]
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Анна Лёвина",
+    "jobTitle": "Клинический психолог",
+    "description": "Клинический психолог. Специализируется на экзистенциальной терапии, НЛП, психодинамическом подходе, символдраме. Работает с кризисами среднего возраста, тревогой, депрессией.",
+    "image": "https://lavjourney.kz/anya-main.jpg",
+    "url": "https://lavjourney.kz",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Алматы",
+      "addressCountry": "KZ"
+    },
+    "alumniOf": [
+      {
+        "@type": "EducationalOrganization",
+        "name": "МГУ",
+        "description": "MBA"
+      },
+      {
+        "@type": "EducationalOrganization", 
+        "name": "Университет",
+        "description": "Магистратура по клинической психологии"
+      }
+    ],
+    "knowsAbout": [
+      "Клиническая психология",
+      "Экзистенциальная терапия",
+      "НЛП",
+      "Психодинамический подход",
+      "Символдрама",
+      "Расстановки",
+      "Трансформационная игра Лила",
+      "Кризис среднего возраста",
+      "Тревожные расстройства",
+      "Депрессия"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "name": "Психологические консультации",
+      "description": "Онлайн и офлайн психологические консультации",
+      "price": "25000-45000",
+      "priceCurrency": "KZT"
+    },
+    "sameAs": [
+      "https://bit.ly/lavjourney-contact-wa"
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Психолог Анна Лёвина — онлайн терапия и консультации в Алматы",
+    "description": "Клинический психолог Анна Лёвина ✓ Онлайн консультации по всему миру ✓ Офлайн в Алматы ✓ Работа с тревогой, депрессией, кризисами ✓ Расстановки, игра Лила ✓ Экзистенциальная терапия",
+    "url": "https://lavjourney.kz",
+    "inLanguage": "ru",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "Психолог Анна Лёвина",
+      "url": "https://lavjourney.kz"
+    },
+    "about": {
+      "@type": "Thing",
+      "name": "Психологические услуги",
+      "description": "Психотерапия, консультации, расстановки, НЛП"
+    },
+    "mainEntity": {
+      "@type": "Person",
+      "name": "Анна Лёвина",
+      "jobTitle": "Клинический психолог"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Психологические консультации",
+    "description": "Профессиональные психологические консультации онлайн и офлайн. Работа с тревогой, депрессией, кризисами, личностным ростом.",
+    "provider": {
+      "@type": "Person",
+      "name": "Анна Лёвина",
+      "jobTitle": "Клинический психолог"
+    },
+    "areaServed": [
+      {
+        "@type": "Place",
+        "name": "Worldwide",
+        "description": "Онлайн консультации"
+      },
+      {
+        "@type": "City",
+        "name": "Алматы",
+        "addressCountry": "KZ"
+      }
+    ],
+    "serviceType": [
+      "Психотерапия",
+      "НЛП",
+      "Экзистенциальная терапия",
+      "Расстановки",
+      "Трансформационные игры"
+    ],
+    "offers": [
+      {
+        "@type": "Offer",
+        "name": "Индивидуальная сессия",
+        "price": "25000",
+        "priceCurrency": "KZT"
+      },
+      {
+        "@type": "Offer", 
+        "name": "НЛП консультация",
+        "price": "45000",
+        "priceCurrency": "KZT"
+      }
+    ]
+  }
+  </script>
+
 </head>
 <body>
   <header>
