--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta name="keywords" content="психолог Алматы, клинический психолог, онлайн терапия, психологические консультации, расстановки, игра лила, экзистенциальная терапия, НЛП, тревога, депрессия, кризис среднего возраста, выгорание, психотерапия онлайн, психолог женщина, телесные шахматы, символдрама, психодинамический подход, личностный рост, самопознание">
   <meta property="og:title" content="Анна Лёвина">
   <meta property="og:description" content="Анна Лёвина — квалифицированная психологическая поддержка">
+  <meta property="og:image" content="https://lavjourney.kz/anya-main.jpg">
+  <meta property="og:image:alt" content="Психолог Анна Лёвина — клинический психолог в Алматы">
+  <meta property="og:url" content="https://lavjourney.kz">
+  <meta property="og:type" content="website">
   <meta name="robots" content="index, follow">
 
   <link rel="icon" href="favicon.png" type="image/png">
