--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta name="robots" content="index, follow">
 
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="https://lavjourney.kz/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
@@ -51,7 +51,7 @@
     "image": "https://lavjourney.kz/anya-main.jpg",
     "logo": "https://lavjourney.kz/logo.png",
     "sameAs": [
-      "https://bit.ly/lavjourney-contact-wa"
+      "contact-wa.html"
     ],
     "serviceArea": {
       "@type": "Place",
@@ -160,7 +160,7 @@
       "priceCurrency": "KZT"
     },
     "sameAs": [
-      "https://bit.ly/lavjourney-contact-wa"
+      "contact-wa.html"
     ]
   }
   </script>
@@ -516,7 +516,7 @@
         </div>
 
         <div class="card" style="text-align: center;">
-          <a href="https://bit.ly/lavjourney-contact-wa" target="_blank" style="display: block; text-decoration: none; color: inherit;cursor: default;">
+          <a href="contact-wa.html" target="_blank" style="display: block; text-decoration: none; color: inherit;cursor: default;">
             <i class="fab fa-whatsapp" style="font-size: 2rem; color: var(--accent-color);"></i>
             <p><span class="contact-link">WhatsApp</span></p>
           </a>
