--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </nav>
       </div>
     </div>
-      <div class="container announcement-content" style="overflow: hidden; position: relative;">
+      <div class="container announcement-content" id="announcement-content-widget" edicontent_id="announcement_visibility_edicontent_id" style="overflow: hidden; position: relative;">
         <div class="announcement-marquee">
           <span class="announcement-text" edicontent_id="announcement">Приглашаю Вас на Расстановки в г. Алматы, 12 сентября в 20:00</span>
         </div>
@@ -331,8 +331,7 @@
     <div class="container">
       <div class="hero-text-block">
         <div class="hero-slogan" edicontent_id="dobro-pozhalovat-v-puteshestvie-k-se"> Добро пожаловать в путешествие. <span class="no-break">К себе.</span> <span class="no-break">Без масок.</span></div>
-        <!-- <h1>Анна Лёвина</h1> -->
-        <!-- <p class="subtitle">Если вы здесь — возможно, настал момент что-то изменить</p> -->
+
         <div class="hero-paragraphs">
           <p edicontent_id="ya-veryu-v-to-chto-sluchaynosti-ne-s">Я верю в то, что случайности не случайны. Если Вы оказались на этой странице, возможно, что-то внутри больше не дает жить по-прежнему. Иногда жизнь будто теряет краски — на смену им приходят тревога, напряжение или ощущение пустоты. Каждый день похож на предыдущий, а в душе тихо назревает вопрос: «Как дальше»?  </p>
           <blockquote edicontent_id="ya-poka-ne-znayu-s-chem-imenno-vy-prishli">Если Вы чувствуете растерянность или усталость, переживаете утрату, кризис в отношениях, сталкиваетесь с внутренними страхами, одиночеством или потерей смысла — я работаю с такими состояниями и понимаю, как непросто сделать первый шаг. Важно помнить — Вы не обязаны справляться с этим в одиночку. Наше общение будет конфиденциальным, безопасным и бережным. Мы вместе разберемся, что с Вами происходит, и постепенно откроем пространство, в котором снова можно свободно дышать и чувствовать вкус жизни.</blockquote>
