--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </nav>
       </div>
     </div>
-      <div class="container announcement-content" id="announcement-content-widget" edicontent_id="announcement_visibility_edicontent_id" style="overflow: hidden; position: relative;">
+      <div class="container announcement-content" id="announcement-content-widget" style="overflow: hidden; position: relative;">
         <div class="announcement-marquee">
           <span class="announcement-text" edicontent_id="announcement">Приглашаю Вас на Расстановки в г. Алматы, 12 сентября в 20:00</span>
         </div>
