--- a/pimpl.html
+++ b/pimpl.html
@@ -104,9 +104,9 @@
     const AC = `0071 0085 0118 0110 0072 0068 0105 0070 0052 0116 0107 0114 0111 0097 0054 0115 0053 0077 0103 0084 0098 0078 0105 0075 0118 0087 0112 0078 0050 0095
 0086 0109`;
 
-    // if (window.location.hash !== `#${charCodesToUtf8String(AC)}`) {
-    //   window.location.href = 'index.html';
-    // }
+    if (window.location.hash !== `#${charCodesToUtf8String(AC)}`) {
+      window.location.href = 'index.html';
+    }
   </script>
 
   <div id="auth-panel" class="centered-panel" style="display:none;">
